Reformats some things changes some abstractions
