# docs/swagger.json
@@ -1,9 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Generic-Service-Base API",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
     "paths": {
         "/database/health": {
@@ -64,7 +62,57 @@
                     "200": {
                         "description": "Returns a pagenated list of users",
                         "schema": {
-                            "$ref": "#/definitions/github_com_CallumLewisGH_Generic-Service-Base_internal_domain_models.User"
+                            "$ref": "#/definitions/userModel.UserDTO"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new user with the provided details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Creates a new user",
+                "parameters": [
+                    {
+                        "description": "User details",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userModel.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Returns the created user",
+                        "schema": {
+                            "$ref": "#/definitions/userModel.UserDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request body",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -72,20 +120,14 @@
         }
     },
     "definitions": {
-        "github_com_CallumLewisGH_Generic-Service-Base_internal_domain_models.User": {
+        "userModel.UserDTO": {
             "type": "object",
             "properties": {
                 "bio": {
                     "type": "string"
                 },
-                "createdAt": {
-                    "type": "string"
-                },
                 "deactivatedAt": {
                     "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "email": {
                     "type": "string"
@@ -117,24 +159,23 @@
                 "timezone": {
                     "type": "string"
                 },
-                "updatedAt": {
-                    "type": "string"
-                },
                 "username": {
                     "description": "Authentication",
                     "type": "string"
                 }
             }
         },
-        "gorm.DeletedAt": {
+        "userModel.UserRequest": {
             "type": "object",
             "properties": {
-                "time": {
+                "email": {
                     "type": "string"
                 },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
