# internal/domain/user/user_request.go
@@ -1,0 +1,7 @@
+package userModel
+
+type UserRequest struct {
+	Username string
+	Email    string
+	Password string
+}
